# sbu-cse328-template

./: .gitignore  CMakeLists.txt  bscript.sh  cpp.hint
assets/shaders/: basic.frag  basic.vert  simple.frag  simple.vert
glad/: CMakeLists.txt
glad/include/glad/: gl.h
glm/: CMakeLists.txt
imgui/: CMakeLists.txt
include/: app.h  callback.h  color.h  glsl_object.h  renderer.h  scene.h  util.h  window.h
include/gl/: gl_object.h  glsl_object.h  texture.h  uniform.h  vao.h  vertex_layout.h
include/gl/component/: fragment.h  uniform_macros.h  vertex.h
include/glad/: glad.h
include/input/: input_handler.h  key.h
src/: app.cpp  callback.cpp  color.cpp  glad.c  glsl_object.cpp  main.cpp  renderer.cpp  scene.cpp  util.cpp
src/gl/: gl_object.cpp  glsl_object.cpp  texture.cpp  uniform.cpp  vertex_layout.cpp
src/input/: input_handler.cpp  key.cpp
